# vision_system

./: CMakeLists.txt  package.xml
config/: params.yaml
include/picam_client/: CMakeLists.txt  picam_client_node.hpp
launch/: picam_client.launch.py
msg/: BoundingBox.msg
picam_client/: CMakeLists.txt  package.xml
picam_client/config/: params.yaml
picam_client/include/picam_client/: base64.h  picam_client_node.hpp
picam_client/launch/: picam_client.launch.py
picam_client/msg/: BoundingBox.msg
picam_client/src/: base64.cpp  picam_client_node.cpp
picam_client/srv/: SetConfidence.srv  SetIOU.srv  StreamControl.srv
src/: base64.cpp  picam_client_node.cpp
srv/: SetConficence.srv  SetIOU.srv  StreamControl.srv
